force-app/main/default/objects/Churn_Risk__c/Churn_Risk__c.object-meta.xml
<CustomObject>
    <label>Churn Risk</label>
    <nameField>
        <label>Churn Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Churn Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>