force-app/main/default/objects/Churn_Risk__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Churn Risks</relationshipLabel>
    <relationshipName>Churn_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>