force-app/main/default/objects/Churn_Risk__c/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>