force-app/main/default/objects/Churn_Risk__c/fields/Billing_Value_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Billing_Value_At_Risk__c</fullName>
    <label>Billing Value At Risk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>