force-app/main/default/objects/Churn_Risk__c/fields/Churn_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Reason__c</fullName>
    <label>Churn Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Competitor Bundle</fullName>
            </value>
            <value>
                <fullName>Consolidation</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Global Agreement</fullName>
            </value>
            <value>
                <fullName>Liquidation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RFP/Tender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>