force-app/main/default/objects/Churn_Risk__c/fields/Churn_Risk_Source__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Source__c</fullName>
    <label>Churn Risk Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Carrier Churn Alert</fullName>
            </value>
            <value>
                <fullName>IAM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>