force-app/main/default/objects/Churn_Risk__c/fields/Est_Profit__c.field-meta.xml
<CustomField>
    <fullName>Est_Profit__c</fullName>
    <label>Est. Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>