force-app/main/default/objects/Churn_Risk__c/fields/Est_Profit_percent__c.field-meta.xml
<CustomField>
    <fullName>Est_Profit_percent__c</fullName>
    <label>Est. Profit %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>