force-app/main/default/objects/Churn_Risk__c/fields/Estimated_Billing_Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Billing_Stop_Date__c</fullName>
    <label>Estimated Billing Stop Date</label>
    <type>Date</type>
</CustomField>