force-app/main/default/objects/Churn_Risk__c/fields/Estimated_Close__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close__c</fullName>
    <label>Estimated Close</label>
    <type>Date</type>
</CustomField>