force-app/main/default/objects/Churn_Risk__c/fields/MSCRMchurnGUID__c.field-meta.xml
<CustomField>
    <fullName>MSCRMchurnGUID__c</fullName>
    <description>Zintel NZ field.</description>
    <externalId>true</externalId>
    <label>MSCRMchurnGUID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>