force-app/main/default/objects/Churn_Risk__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10% - Aware of Churn Risk</fullName>
            </value>
            <value>
                <fullName>30% - Proposal Presented &amp; Likely to Retain</fullName>
            </value>
            <value>
                <fullName>50% - Customer Considering Proposals</fullName>
            </value>
            <value>
                <fullName>70% - Product/Service Likely to Churn</fullName>
            </value>
            <value>
                <fullName>90% - Verbal Churn Confirmation Received</fullName>
            </value>
            <value>
                <fullName>100% - Product/Service Churned</fullName>
            </value>
            <value>
                <fullName>0% - Product/Service Retained</fullName>
            </value>
            <value>
                <fullName>0% - Contract Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>