force-app/main/default/objects/Churn_Risk__c/fields/Product_Service_Provided_Since__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Provided_Since__c</fullName>
    <label>Product/Service Provided Since</label>
    <type>Date</type>
</CustomField>