force-app/main/default/objects/Churn_Risk__c/fields/Total_or_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_or_Monthly_Revenue__c</fullName>
    <label>Total or Monthly Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Total Revenue</fullName>
            </value>
            <value>
                <fullName>Monthly Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>